--- a/Sistem-Vehiculos API/Views/VehicleTypes/Delete.cshtml
+++ b/Sistem-Vehiculos API/Views/VehicleTypes/Delete.cshtml
@@ -12,10 +12,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Descripcion)
+            @Html.DisplayNameFor(model => model.Description)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Descripcion)
+            @Html.DisplayFor(model => model.Description)
         </dd>
     </dl>
     
